source/blender/editors/include/ED_view3d.h
@@ -1317,18 +1317,16 @@ void ED_view3d_shade_update(struct Main *bmain, struct View3D *v3d, struct ScrAr
 #define OVERLAY_RETOPOLOGY_ENABLED(overlay) \
   (((overlay).edit_flag & V3D_OVERLAY_EDIT_RETOPOLOGY) != 0)
 #ifdef __APPLE__
-/* Apple silicon tile depth test requires a higher value to reduce drawing artifacts.*/
-#  define OVERLAY_RETOPOLOGY_MIN_OFFSET_ENABLED 0.0015f
-#  define OVERLAY_RETOPOLOGY_MIN_OFFSET_DISABLED 0.0015f
+/* Apple silicon tile depth test requires a higher value to reduce drawing artifacts. */
+#  define OVERLAY_RETOPOLOGY_MIN_OFFSET 0.0015f
 #else
-#  define OVERLAY_RETOPOLOGY_MIN_OFFSET_ENABLED FLT_EPSILON
-#  define OVERLAY_RETOPOLOGY_MIN_OFFSET_DISABLED 0.0f
+#  define OVERLAY_RETOPOLOGY_MIN_OFFSET FLT_EPSILON
 #endif
 
 #define OVERLAY_RETOPOLOGY_OFFSET(overlay) \
   (OVERLAY_RETOPOLOGY_ENABLED(overlay) ? \
-       max_ff((overlay).retopology_offset, OVERLAY_RETOPOLOGY_MIN_OFFSET_ENABLED) : \
-       OVERLAY_RETOPOLOGY_MIN_OFFSET_DISABLED)
+       max_ff((overlay).retopology_offset, OVERLAY_RETOPOLOGY_MIN_OFFSET) : \
+       0.0f)
 
 #define RETOPOLOGY_ENABLED(v3d) (OVERLAY_RETOPOLOGY_ENABLED((v3d)->overlay))
 #define RETOPOLOGY_OFFSET(v3d) (OVERLAY_RETOPOLOGY_OFFSET((v3d)->overlay))
